# pycudasift

./: CMakeLists.txt  cudaSiftH.cu  matching.cu  setup.cfg  setup.py
cudasift/: __init__.py  _cudasift.cpp  _cudasift.pyx
cudasift.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lib/: CMakeLists.txt
test_data/: test.py
tests/: test_extractsift.py
